{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 37,
  "lineage": "40a78197-7955-0fbe-fca1-0837bd276aa5",
  "resources": [
    {
      "module": "module.example_vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-0eec172549556b2ed",
            "id": "rtb-0eec172549556b2ed",
            "owner_id": "905781841335",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d45b52dc48368a54",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "default route table",
              "env": "RDS_EC2"
            },
            "vpc_id": "vpc-07601949e9a1b56fb"
          },
          "dependencies": [
            "module.example_vpc.aws_internet_gateway.gw",
            "module.example_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.example_vpc",
      "mode": "managed",
      "type": "aws_instance",
      "name": "VM-in-new-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0885b1f6bd170450c",
            "arn": "arn:aws:ec2:us-east-1:905781841335:instance/i-0f11221267cc78613",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0f11221267cc78613",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2_rds",
            "monitoring": false,
            "primary_network_interface_id": "eni-0543b35c876ab7ec3",
            "private_dns": "ip-10-0-0-100.ec2.internal",
            "private_ip": "10.0.0.100",
            "public_ip": "3.238.240.98",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-0a5ff785c67b72b8f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03d30787aa61effd3",
            "tags": {
              "Name": "RDS_EC2_ec2_key"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-004236364d799d5a9"
            ]
          },
          "dependencies": [
            "module.example_vpc.aws_security_group.ec2",
            "module.example_vpc.aws_subnet.subnet",
            "module.example_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.example_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0d45b52dc48368a54",
            "owner_id": "905781841335",
            "tags": {
              "Env": "RDS_EC2",
              "Name": "RDS_EC2_gw"
            },
            "vpc_id": "vpc-07601949e9a1b56fb"
          },
          "dependencies": [
            "module.example_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.example_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905781841335:security-group/sg-004236364d799d5a9",
            "description": "EC2 security group (terraform-managed)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-004236364d799d5a9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Telnet",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "RDS_EC2_sg",
            "name_prefix": null,
            "owner_id": "905781841335",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-07601949e9a1b56fb"
          },
          "dependencies": [
            "module.example_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.example_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905781841335:subnet/subnet-03d30787aa61effd3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-03d30787aa61effd3",
            "map_public_ip_on_launch": true,
            "owner_id": "905781841335",
            "tags": {
              "Env": "RDS_EC2",
              "Name": "RDS_EC2_subnet"
            },
            "vpc_id": "vpc-07601949e9a1b56fb"
          },
          "dependencies": [
            "module.example_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.example_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905781841335:subnet/subnet-07715710e7dd24302",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-07715710e7dd24302",
            "map_public_ip_on_launch": true,
            "owner_id": "905781841335",
            "tags": {
              "Env": "RDS_EC2",
              "Name": "RDS_EC2_subnet1"
            },
            "vpc_id": "vpc-07601949e9a1b56fb"
          },
          "dependencies": [
            "module.example_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.example_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905781841335:vpc/vpc-07601949e9a1b56fb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0641ab9fc3610576d",
            "default_route_table_id": "rtb-0eec172549556b2ed",
            "default_security_group_id": "sg-0a38a05017ee31a90",
            "dhcp_options_id": "dopt-0795b9bb52254b06e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-07601949e9a1b56fb",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0eec172549556b2ed",
            "owner_id": "905781841335",
            "tags": {
              "Env": "RDS_EC2",
              "Name": "RDS_EC2_vpc",
              "enable_dns_hostnames": "true",
              "enable_dns_support": "true"
            }
          }
        }
      ]
    }
  ]
}